Fix:  Context menu show offscreen when the control is at the very end.

--- a/src/index.css
+++ b/src/index.css
@@ -44,3 +44,6 @@ p {
 .position-relative{
   position: relative;
 }
+.visibility-hidden{
+  visibility: hidden;
+}
